Fix for the gap between search and menu.

--- a/src/sass/objects/_search.scss
+++ b/src/sass/objects/_search.scss
@@ -1,7 +1,7 @@
 .search {
     top: 0;
     right: 0;
-    width: 48px;
+    width: 49px;
     height: 100%;
     position: absolute;
 
